# mcp-garden

./: .gitignore  LICENSE  README.md
awesome-mcp/: .awesome-mcp.yml  CONTRIBUTING.md  README.md
awesome-mcp/categories/: documentation.md  open-source-projects.md  tools.md
experiments/fastapi-mcp-sdk/: LICENSE  README.md  pyproject.toml
experiments/fastapi-mcp-sdk/examples/: _run_with_fastmcp.py  _run_with_mount.py  _shopping_cart_app.py  run_examples.py  test_examples.py
experiments/fastapi-mcp-sdk/examples/fixtures/: products.json  users.json
experiments/fastapi-mcp-sdk/fastapi_mcp_sdk/: __init__.py  server.py
experiments/mcp-abac-auth/: README.md  discussion.md
experiments/mcp2code/: .gitignore  README.md  pyproject.toml
experiments/mcp2code/examples/: README.md  _run_stdio.py  _run_streamable_http.py  _shopping_cart_app.py  mcp.json.example  requirements.txt  test_generated_code.py
experiments/mcp2code/src/mcp2code/: __init__.py  cli.py  config.py  generator.py  transport.py  types.py
experiments/mcp2code/src/mcp2code/runtime/: __init__.py  connection_pool.py
