[project]
name = "mcp2code"
version = "0.1.0"
description = "Generate Python packages from MCP configuration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.21.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.scripts]
mcp2code = "mcp2code.cli:generate"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ipython>=9.7.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

